[package]
name = "ZoneServer"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
protobuf = "4.32.1-release"
futures-ticker = "0.0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"
time = "0.3"